5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1649_2711.log
== TEST (2019-04-05 20:42:39) 
-- CODE:
valordis=float(input("valor"))
quanttick=int(input("quant"))
valortick=float(input("valortick"))
quantpass=int(input("quantpass"))
valorpass=float(input("valorpass"))
ww=(quanttick*valortick)+(quantpass*valorpass)
if (valor>=ww) :
	msn=suficiente
else :
	msn=insuficiente
print(msn.upper())	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (valor>=ww) :
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:43:11) 
-- CODE:
valordis=float(input("valor"))
quanttick=int(input("quant"))
valortick=float(input("valortick"))
quantpass=int(input("quantpass"))
valorpass=float(input("valorpass"))
ww=(quanttick*valortick)+(quantpass*valorpass)
if (valor>=ww) :
	msn=suficiente
else :
	msn=insuficiente
print(msn.upper())	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (valor>=ww) :
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:43:32) 
-- CODE:
valordis=float(input("valor"))
quanttick=int(input("quant"))
valortick=float(input("valortick"))
quantpass=int(input("quantpass"))
valorpass=float(input("valorpass"))
ww=(quanttick*valortick)+(quantpass*valorpass)
if (valor>==ww) :
	msn=suficiente
else :
	msn=insuficiente
print(msn.upper())	
-- ERROR:
File "XXXX", line 7
    if (valor>==ww) :
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:43:46) 
-- CODE:
valordis=float(input("valor"))
quanttick=int(input("quant"))
valortick=float(input("valortick"))
quantpass=int(input("quantpass"))
valorpass=float(input("valorpass"))
ww=(quanttick*valortick)+(quantpass*valorpass)
if (valordis>=ww) :
	msn=suficiente
else :
	msn=insuficiente
print(msn.upper())	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    msn=suficiente
NameError: name 'suficiente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:44:41) 
-- CODE:
valordis=float(input("valor"))
quanttick=int(input("quant"))
valortick=float(input("valortick"))
quantpass=int(input("quantpass"))
valorpass=float(input("valorpass"))
ww=(quanttick*valortick)+(quantpass*valorpass)
if (valordis>=ww) :
	msn="suficiente"
else :
	msn="insuficiente"
print(msn.upper())	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:45:30) 
-- CODE:
valordis=float(input("valor"))
quanttick=int(input("quant"))
valortick=float(input("valortick"))
quantpass=int(input("quantpass"))
valorpass=float(input("valorpass"))
ww=(quanttick*valortick)+(quantpass*valorpass)
if (valordis>=ww) :
	msn="suficiente"
else :
	msn="insuficiente"
print(msn.upper())	
-- EXECUTION TIME:
0.137156
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:46:28) 
-- CODE:
valordis=float(input("valor"))
quanttick=int(input("quant"))
valortick=float(input("valortick"))
quantpass=int(input("quantpass"))
valorpass=float(input("valorpass"))
ww=(quanttick*valortick)+(quantpass*valorpass)
if (valordis>=ww) :
	msn="suficiente"
else :
	msn="insuficiente"
print(msn)	
-- OUTPUT:
suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:46:47) 
-- CODE:
valordis=float(input("valor"))
quanttick=int(input("quant"))
valortick=float(input("valortick"))
quantpass=int(input("quantpass"))
valorpass=float(input("valorpass"))
ww=(quanttick*valortick)+(quantpass*valorpass)
if (valordis>=ww) :
	msn="suficiente"
else :
	msn="insuficiente"
print(msn)	
-- EXECUTION TIME:
0.267513
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
suficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:47:20) 
-- CODE:
valordis=float(input("valor"))
quanttick=int(input("quant"))
valortick=float(input("valortick"))
quantpass=int(input("quantpass"))
valorpass=float(input("valorpass"))
ww=(quanttick*valortick)+(quantpass*valorpass)
if (valordis>=ww) :
	msn="SUFICIENTE"
else :
	msn="INSUFICIENTE"
print(msn)	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:47:37) 
-- CODE:
valordis=float(input("valor"))
quanttick=int(input("quant"))
valortick=float(input("valortick"))
quantpass=int(input("quantpass"))
valorpass=float(input("valorpass"))
ww=(quanttick*valortick)+(quantpass*valorpass)
if (valordis>=ww) :
	msn="SUFICIENTE"
else :
	msn="INSUFICIENTE"
print(msn)	
-- EXECUTION TIME:
0.131825
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:13:02) 
-- CODE:
valor=float(input("valor"))

qtt=int(input("a"))
vt=float(input("b"))

qtp=int(input("c"))
vp=float(input("d"))

if(qtt+vt+qtp+vp>=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:13:05) 
-- CODE:
valor=float(input("valor"))

qtt=int(input("a"))
vt=float(input("b"))

qtp=int(input("c"))
vp=float(input("d"))

if(qtt+vt+qtp+vp>=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.195535
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:13:43) 
-- CODE:
valor=float(input("valor"))

qtt=int(input("a"))
vt=float(input("b"))

qtp=int(input("c"))
vp=float(input("d"))

if((qtt*vt)+(qtp*vp)>=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.131259
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:13:44) 
-- CODE:
valor=float(input("valor"))

qtt=int(input("a"))
vt=float(input("b"))

qtp=int(input("c"))
vp=float(input("d"))

if((qtt*vt)+(qtp*vp)>=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:14:08) 
-- CODE:
valor=float(input("valor"))

qtt=int(input("a"))
vt=float(input("b"))

qtp=int(input("c"))
vp=float(input("d"))

if( (qtt*vt) + (qtp*vp) >=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:14:16) 
-- CODE:
valor=float(input("valor"))
qtt=int(input("a"))
vt=float(input("b"))
qtp=int(input("c"))
vp=float(input("d"))
if( (qtt*vt) + (qtp*vp) >=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.19526
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:14:18) 
-- CODE:
valor=float(input("valor"))
qtt=int(input("a"))
vt=float(input("b"))
qtp=int(input("c"))
vp=float(input("d"))
if( (qtt*vt) + (qtp*vp) >=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:15:20) 
-- CODE:
valor=float(input("valor"))
qtt=int(input("a"))
vt=float(input("b"))
qtp=int(input("c"))
vp=float(input("d"))
if( (qtt*vt) + (qtp*vp) >= valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.166608
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:15:35) 
-- CODE:
valor=float(input("valor"))
qtt=int(input("a"))
vt=float(input("b"))
qtp=int(input("c"))
vp=float(input("d"))
if( (qtt*vt) + (qtp*vp) <= valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.195044
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
